# tao

./: .gitignore  .gitlint  .gitmodules  .licenserc.json  Cargo.toml  README.md  bors.toml  deploy.sh  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  flake-ci.yml  license.yml
analysis/: Cargo.toml
analysis/examples/: expr.rs  module.rs
analysis/src/: class.rs  concrete.rs  context.rs  data.rs  debug.rs  def.rs  effect.rs  error.rs  exhaustivity.rs  hir.rs  infer.rs  lib.rs  lower.rs  reify.rs  ty.rs
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  welcome.md
cir/: Cargo.toml  README.md
cir/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs
compiler/tests/: lists.tao  math.tao  records.tao  tester.rs
examples/: 99.tao  adventure.tao  arithmetic.tao  ast.tao  brainfuck.tao  calc.tao  cipher.tao  debug.tao  definitions.brd  eff.tao  effect.tao  effects.tao  error.tao  eval.tao  experiments.tao  generics.tao  hello.tao  input.tao  io.tao  item.tao  iterators.brd  lambda.tao  min.tao  mod_pow.tao  mutate.tao  obl.tao  opt.tao  parse.tao  polymorphic_effects.tao  prime.brd  quickcheck.tao  quicksort.brd  records.tao  succ.tao  test-defs.brd  test.brd  test.tao  test2.tao  todo.tao  type-astronomy.tao
lib/: core.tao  list.tao  main.tao  math.tao  parse.tao  std.tao
lib/core/: bool.tao  monad.tao  ops.tao  tail.tao
lib/std/: btree.tao  container.tao  error.tao  fmt.tao  func.tao  io.tao  list.tao  map.tao  math.tao  mut.tao  ops.tao  str.tao  stream.tao  type.tao  util.tao  value.tao
middle/: Cargo.toml
middle/examples/: module.rs
middle/src/: context.rs  error.rs  lib.rs  lower.rs  mir.rs  proc.rs  repr.rs
middle/src/opt/: commute_branches.rs  const_fold.rs  flatten_single_field.rs  inline.rs  mod.rs  remove_dead_proc.rs  remove_identity_branches.rs  remove_unused_bindings.rs  simplify_arithmetic.rs
playground/: Cargo.toml  README.md  deploy.sh  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
playground/js/: index.css  index.js
playground/src/: lib.rs
playground/static/: index.css  index.html
playground/static/ace/: mode-tao.js
site/: Cargo.toml  deploy-netlify.sh  index.html  index.scss
site/src/: main.rs
src/: ast.rs  compile.rs  error.rs  eval.rs  hir.rs  hir2.rs  lex.rs  lib.rs  main.rs  mir.rs  node.rs  node2.rs  parse.rs  scope.rs  src.rs  ty.rs
src/ast/: lex.rs  loader.rs  mod.rs  parse.rs
src/hir/: check.rs  data.rs  infer.rs  infer2.rs  intrinsic.rs  lower.rs  mod.rs  ty.rs
src/tao/: prelude.tao
src/util/: mod.rs  node.rs  span.rs
src/vm/: builder.rs  compile.rs  mod.rs  program.rs  value.rs  vm.rs
syntax/: Cargo.toml
syntax/examples/: basic.tao  class.tao  demo.tao  expr.rs  module.rs  sample.tao  test.tao  todo.tao
syntax/src/: ast.rs  error.rs  lib.rs  node.rs  parse.rs  span.rs  src.rs  token.rs
test_cases/: 99.tao  adventure.tao  basic.tao  calc.tao  cipher.tao  debug.tao  eff.tao  effect.tao  effects.tao  error.tao  eval.tao  hello.tao  io.tao  mutate.tao  opt.tao  pattern.tao  polymorphic_effects.tao  subtyping.tao  tdark_streams.tao  test.tao  type-astronomy.tao
util/: Cargo.toml
util/src/: index.rs  lib.rs
vm/: Cargo.toml
vm/examples/: module.rs
vm/src/: code.rs  exec.rs  lib.rs  lower.rs
wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
wasm/js/: index.js  worker.js
wasm/src/: lib.rs
wasm/static/: index.css  index.html
web_demo/: Cargo.toml  deploy-netlify.sh  package-lock.json
web_demo/site/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
web_demo/site/examples/: brainfuck.tao  classes.tao  hello.tao  input.tao
web_demo/src/: lib.rs
web_demo/tests/: web.rs
