[package]
name = "tao"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tao"
required-features = ["rustyline"]

[features]
default = ["rustyline"]

[dependencies]
parze = { git = "https://github.com/zesterer/parze-new.git" }
#parze = { path = "../parze-new" }
internment = "0.3"
rustyline = { version = "6.0", optional = true }
im-rc = "14.0"
nanbox = "0.2"
serde = { version = "1", optional = true, features = ["derive"] }
