[package]
name = "tao"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[features]
default = ["rustyline"]

[dependencies]
#parze = { git = "https://github.com/zesterer/parze-new.git" }
#parze = { path = "../parze2" }
combine = "4.3"
internment = "0.3"
rustyline = { version = "6.0", optional = true }
im-rc = "14.0"
bimap = "0.4"
#codespan-reporting = "0.9"
codespan-reporting = { path = "../codespan/codespan-reporting" }
lingo = { path = "../lingo" }
slab = "0.4"
