[package]
name = "tao_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
tao_util = { path = "../util" }
tao_syntax = { path = "../syntax" }
#ariadne = "0.1"
ariadne = { git = "https://github.com/zesterer/ariadne.git" }
#ariadne = { path = "../../ariadne" }
hashbrown = "0.11"
internment = "0.5"
ranges = { git = "https://gitlab.com/bit-refined/ranges.git" }
dot = { version = "0.1", optional = true }

[features]
debug = ["dot"]
default = ["debug"]

[dev-dependencies]
rustyline = "9.0"
