[package]
name = "tao"
version = "0.1.0"
edition = "2021"
default-run = "tao"

[dependencies]
tao_syntax = { path = "../syntax" }
tao_analysis = { path = "../analysis" }
tao_middle = { path = "../middle" }
tao_cir = { path = "../cir" }
tao_vm = { path = "../vm" }
internment = "0.5"

#ariadne = "0.1"
ariadne = { git = "https://github.com/zesterer/ariadne.git" }
#ariadne = { path = "../../ariadne" }
structopt = "0.3"
