[package]
name = "tao_middle"
version = "0.1.0"
edition = "2021"

[dependencies]
tao_analysis = { path = "../analysis", default-features = false }
tao_syntax = { path = "../syntax" }
#ariadne = "0.1"
ariadne = { git = "https://github.com/zesterer/ariadne.git" }
#ariadne = { path = "../../ariadne" }
internment = "0.5"
hashbrown = "0.11"

[dev-dependencies]
rustyline = "9.0"
