# You must change these to your own details.
[package]
name = "tao-playground"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"] }
serde = "1"
tao = { path = "../", default-features = false, features=["serde"] }

[patch.crates-io]
thread-id = { path = '../thread-id' }