[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = { path = "../compiler", default-features = false, features = ["debug"] }
tao_vm = { path = "../vm" }

yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "HtmlSelectElement", "HtmlIFrameElement", "CssStyleDeclaration"] }
include_dir = "0.7"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
yew-ansi = { git = "https://github.com/zesterer/yew-ansi.git" }
urlencoding = "2.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"
