[package]
name = "tao_syntax"
version = "0.1.0"
edition = "2018"

[dependencies]
#chumsky = { path = "../../chumsky", features = ["nightly"] }
#chumsky = { git = "https://github.com/zesterer/chumsky.git" }
chumsky = "0.8.0"
internment = "0.5"
#ariadne = "0.1"
ariadne = { git = "https://github.com/zesterer/ariadne.git" }
hashbrown = "0.11"

[dev-dependencies]
rustyline = "9.0"
